# SoupeUp

./: .gitignore  README.md
clients/: README.md
clients/client/src/: types.ts
cluster-runtime/: Cargo.toml  package.json
cluster-runtime/crates/cluster-runtime-core/: Cargo.toml
cluster-runtime/crates/cluster-runtime-core/resources/plugins/plugin-ray/: manifest.toml
cluster-runtime/crates/cluster-runtime-core/src/: bootstrap.rs  lib.rs
cluster-runtime/crates/cluster-runtime-core/src/api_server/: mod.rs  routes.rs
cluster-runtime/crates/cluster-runtime-core/src/dask/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/jobs/resources/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/network/: discovery.rs
cluster-runtime/crates/cluster-runtime-core/src/plugin_host/: factories.rs  update_check.rs
cluster-runtime/crates/cluster-runtime-core/src/plugin_loader/: discover.rs  enabled.rs  install.rs
cluster-runtime/crates/cluster-runtime-core/src/plugin_registry/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/python_runtime/environment/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/python_runtime/interpreter/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/python_runtime/services/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/python_runtime/utils/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/ray/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/scheduler/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/scheduler/selection/: mod.rs
cluster-runtime/crates/cluster-runtime-core/src/sdk/types/: mod.rs
cluster-runtime/crates/cluster-runtime-server/: Cargo.toml
cluster-runtime/crates/cluster-runtime-server/src/: main.rs  repl.rs
cluster-runtime/scripts/: Setup-PythonRuntime.sh
cluster-runtime/src/: App.tsx
cluster-runtime/src-tauri/: Cargo.toml  tauri.conf.json
cluster-runtime/src-tauri/resources/plugins/plugin-dask-scheduler/: manifest.toml
cluster-runtime/src-tauri/resources/plugins/plugin-mpi/: manifest.toml
cluster-runtime/src-tauri/resources/plugins/plugin-python-runtime/: manifest.toml
cluster-runtime/src-tauri/src/: lib.rs
cluster-runtime/src-tauri/src/api_server/: mod.rs  routes.rs
cluster-runtime/src-tauri/src/commands/: mod.rs
cluster-runtime/src-tauri/src/core/: mod.rs
cluster-runtime/src-tauri/src/dask/: adapter.rs  mod.rs
cluster-runtime/src-tauri/src/dask/client/: mod.rs
cluster-runtime/src-tauri/src/dask/jobs/: mod.rs
cluster-runtime/src-tauri/src/dask/scripts/: mod.rs
cluster-runtime/src-tauri/src/dask/services/: mod.rs
cluster-runtime/src-tauri/src/jobs/: mod.rs
cluster-runtime/src-tauri/src/jobs/dependencies/: mod.rs
cluster-runtime/src-tauri/src/jobs/models/: mod.rs
cluster-runtime/src-tauri/src/logging/: mod.rs
cluster-runtime/src-tauri/src/metrics/: mod.rs
cluster-runtime/src-tauri/src/mpi/launcher/: mod.rs
cluster-runtime/src-tauri/src/mpi/services/: mod.rs
cluster-runtime/src-tauri/src/network/: mod.rs
cluster-runtime/src-tauri/src/nodes/: mod.rs
cluster-runtime/src-tauri/src/plugin_host/: mod.rs
cluster-runtime/src-tauri/src/plugin_loader/: manifest.rs  mod.rs
cluster-runtime/src-tauri/src/plugin_registry/: mod.rs
cluster-runtime/src-tauri/src/python_runtime/process/: mod.rs
cluster-runtime/src-tauri/src/python_runtime/services/: mod.rs
cluster-runtime/src-tauri/src/ray/: adapter.rs
cluster-runtime/src-tauri/src/scheduler/: mod.rs
cluster-runtime/src-tauri/src/scheduler/selection/: mod.rs
cluster-runtime/src/api/: index.ts
cluster-runtime/src/components/: sidebar.tsx  status-badges.tsx
cluster-runtime/src/layouts/: app-layout.tsx
cluster-runtime/src/pages/: cluster-page.tsx  jobs-page.tsx  logs-page.tsx  metrics-page.tsx  nodes-page.tsx  plugins-page.tsx  settings-page.tsx
cluster-runtime/src/stores/: dask-store.ts  index.ts  jobs-store.ts  metrics-store.ts  nodes-store.ts  plugins-store.ts
cluster-runtime/src/types/: index.ts
src/master/: main.py
src/worker/: main.py
