[package]
name = "cluster-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cluster Runtime desktop GUI (Tauri)"
default-run = "cluster-runtime"

[lib]
name = "cluster_runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cluster-runtime-core = { path = "../crates/cluster-runtime-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
