[package]
name = "cluster-runtime-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared Cluster Runtime library (headless + GUI)"

[lib]
name = "cluster_runtime_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
thiserror = "2"
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12"
libloading = "0.9.0"
toml = "1.1.3"
semver = "1.0.28"
tokio = { version = "1.52.3", features = ["full", "net", "rt", "time", "sync", "macros", "signal"] }
sysinfo = "0.39.6"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-native-tls = "0.3"
bytes = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
rand_core = { version = "0.6", features = ["getrandom"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
socket2 = "0.5"
libp2p = { version = "0.54", features = [
  "tokio",
  "tcp",
  "websocket",
  "noise",
  "yamux",
  "identify",
  "ping",
  "request-response",
  "json",
  "macros",
  "dns",
] }
